--- a/.github/workflows/drawio.yml
+++ b/.github/workflows/drawio.yml
@@ -13,7 +13,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Install Tree
-        run: sudo apt-get install tree
+        run: sudo apt-get install tree rename
 
       - name: Render .drawio Files
         uses: docker://ghcr.io/racklet/render-drawio-action:v1
@@ -29,7 +29,7 @@ jobs:
             action-mode: all
 
       - name: Rename Files
-        run: rename s/-Page-\d*// src/dff/*.png
+        run: rename s/-Page-[0-9]+// src/dff/*.png
 
       - name: Print Output
         run: tree src
