--- a/.github/workflows/drawio.yml
+++ b/.github/workflows/drawio.yml
@@ -29,7 +29,7 @@ jobs:
             action-mode: all
 
       - name: Rename Files
-        run: for f in src/dff/*.png; do mv "$f" "$(echo "$f" | sed 's/-Page-[0-9]\+//g')"; done
+        run: for f in src/dff/*.png; do mv "$f" "$(echo "$f" | sed 's/-.\+-[0-9]\+//g')"; done
 
       - name: Print Output
         run: tree src
